syntax = "proto3";

package calculator; 
option go_package = "/calculatorpb";

service CalculatorService {

    rpc Sum(SumRequest) returns (SumResponse) {}
    rpc PrimeNumberDecompostion(PrimeNumberDecompostionRequest) returns (stream PrimeNumberDecompostionResponse) {}
    rpc ComputeAverage(stream ComputeAverageRequest) returns (ComputeAverageResponse) {}
    rpc FindMaximum(stream FindMaximumRequest) returns (stream FindMaximumResponse) {}
    
    rpc PerfectNumber(PerfectNumberRequest) returns (stream PerfectNumberResponse) {}
    rpc TotalNumber(stream TotalNumberRequest) returns (TotalNumberResponse) {}
    rpc FindMinimum(stream FindMinimumRequest) returns (stream FindMinimumResponse) {}
    rpc SquareRoot(SquareRootRequest) returns (SquareRootResponse) {}
    rpc Add(AddRequest) returns (AddResponse) {}
}

message SumRequest {
    int32 first_number = 1;
    int32 second_number = 2;
}

message SumResponse {
    int32 sum_result = 1;
}

message PrimeNumberDecompostionRequest {
    int64 prime_factor = 1;
}

message PrimeNumberDecompostionResponse {
    int64 number = 1;
}

message ComputeAverageRequest {
    int32 number = 1;
}

message ComputeAverageResponse {
    double average = 1;
}

message FindMaximumRequest {
    int32 number = 1;
}

message FindMaximumResponse {
    int32 maximum = 1;
}

message PerfectNumberRequest {
    int32 min = 1;
    int32 max = 2;
}

message PerfectNumberResponse {
    int32 perfect_number = 1;
}
message TotalNumberRequest {
    int32 number = 1;
}

message TotalNumberResponse {
    int32 total = 1;
}

message FindMinimumRequest {
    int32 number = 1;
}

message FindMinimumResponse {
    int32 minimum = 1;
}



message SquareRootRequest {
    int32 number = 1;
}

message SquareRootResponse {
    double square_root = 1;
}

message AddRequest {
    int32 first_number = 1;
    int32 second_number = 2;
}

message AddResponse {
    int32 sum_result = 1;
}